--- a/003_criando-layouts-com-bootstrap/004_grid/style.css
+++ b/003_criando-layouts-com-bootstrap/004_grid/style.css
@@ -39,7 +39,30 @@
     height: 100%;
 }
 
-.col-6, 
-.col-3 {
+.vertical >
+.col-3,
+.col-4, 
+.col-6 {
     height: 50px;
+}
+
+#offset {
+    height: auto;
+}
+
+#offset .col-md-3 {
+    height: 50px;
+    border: 2px solid red;
+}
+
+#gutter .row {
+    height: 200px;
+}
+
+#gutter .col-6 {
+    margin: auto;
+}
+
+.row p {
+    border: 2px solid green;
 }
