--- a/003_criando-layouts-com-bootstrap/004_grid/style.css
+++ b/003_criando-layouts-com-bootstrap/004_grid/style.css
@@ -23,7 +23,6 @@
 .col-11 {
     border: 2px dashed red;
     height: 100%;
-    margin: 0;
 }
 
 #largura-costumizada {
@@ -55,12 +54,13 @@
     border: 2px solid red;
 }
 
+/* GUTTER */
 #gutter .row {
     height: 200px;
 }
 
 #gutter .col-6 {
-    margin: auto;
+    height: auto;
 }
 
 .row p {
