Finalizei a seção que fala sobre icones e tbm finalizei a tarefa proposta

--- a/004_bootstrap-icons/003_tarefa-02/css/style.css
+++ b/004_bootstrap-icons/003_tarefa-02/css/style.css
@@ -1,10 +1,14 @@
 @charset "UTF-8";
 
+.row {
+    padding: 1em;
+}
+
 .col-4 {
     display: flex;
-    font-size: 4em;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    font-size: 4em;
 }
 
 .col-8 {
@@ -22,3 +26,4 @@
 .bi-youtube {
     color: #FF0000;
 }
+
