--- a/005_projeto1-exposicao-artes/css/style.css
+++ b/005_projeto1-exposicao-artes/css/style.css
@@ -1,6 +1,33 @@
 @charset "UTF-8";
 
-h1 {
-    color: red;
+/* Estilos gerais */
+* {
+    color: #25282d;
 }
 
+a, i {
+    transition: .5s;
+    text-decoration: none;
+}
+
+.secondary-color {
+    color: #555;
+}
+
+.center-image {
+    background-size: cover;
+    background-position: center;
+}
+
+.btn {
+    text-decoration: none;
+    background-color: #252823;
+    color: #fff;
+    padding: 7px 18px;
+    border-radius: 0;
+}
+
+.btn-hover {
+    background-color: #333;
+    color: #fff;
+}
