--- a/005_projeto1-exposicao-artes/css/style.css
+++ b/005_projeto1-exposicao-artes/css/style.css
@@ -27,7 +27,59 @@ a, i {
     border-radius: 0;
 }
 
-.btn-hover {
+.btn:hover {
     background-color: #333;
     color: #fff;
+}
+
+/* HEADER */
+header {
+    text-align: center;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+#header p {
+    margin-bottom: 0;
+}
+
+#logo-container {
+    display: flex;
+    justify-content: center;
+}
+
+#logo {
+    width: 40px;
+    margin-right: 15px;
+}
+
+/* NAVBAR */
+#navbar {
+    padding: 10px;
+    margin: 10px auto;
+}
+
+#navbar a {
+    width: 80px;
+    color: #444;
+}
+
+#navbar a:hover {
+    color: #c1b696;
+}
+
+/* MAIN IMAGE */
+.main-image {
+    height: 400px;
+    background-image: url(../img/g_1.jpg);
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.main-image-info {
+    background-color: #fff;
+    padding: 25px;
+    position: absolute;
+    bottom: 25px;
+    left: 25px;
 }
