--- a/005_projeto1-exposicao-artes/css/style.css
+++ b/005_projeto1-exposicao-artes/css/style.css
@@ -121,4 +121,32 @@ header {
     margin-bottom: 20px;
 }
 
+/* FOOTER */
+footer {
+    border-top: 1px solid #ccc;
+    height: 250px;
+    padding: 30px;
+}
 
+footer i {
+    font-size: 20px;
+}
+
+#social-icons-container {
+    padding: 25px;
+}
+
+#social-icons-container div {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+footer p {
+    text-align: center;
+}
+
+a:hover i {
+    color: #c1b696;
+}
