--- a/006_elementos-de-conteudo/010_tarefa-03/css/style.css
+++ b/006_elementos-de-conteudo/010_tarefa-03/css/style.css
@@ -1,14 +1,5 @@
 @charset "UTF-8";
 
-.h4 {
-    display: block;
-    padding: 10px 0;
-}
-
-.h6 {
-    padding: 10px 0;
-}
-
 li {
-    text-align: justify;
+    text-align: center;
 }
