Finalizei a tarefa proposta e a resolução

--- a/007_formularios/016_tarefa-04/css/style.css
+++ b/007_formularios/016_tarefa-04/css/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
-.form-select { 
-width: 82%;
+.form-check {
+    margin-left: 14px;
+}
+
+.btn {
+   width: 120px;
+   margin: 12px;
 }
